crates/lean-rs/tests/compile_fail/handle_outlives_runtime.stderr
error[E0597]: `local` does not live long enough
  --> tests/compile_fail/handle_outlives_runtime.rs:23:33
   |
12 |         let local = ();
   |             ----- binding `local` declared here
...
23 |         host = through(runtime, &local);
   |                                 ^^^^^^ borrowed value does not live long enough
24 |     }
   |     - `local` dropped here while still borrowed
...
29 |     let _escape = host;
   |                   ---- borrow later used here
